--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center" style="height: 240px;">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
                         <h3>We style, you decide</h3>
                         <p class="text-muted">We look at your style, fit, location and preferences to personalize a tote specifically for you. Then you decide if there’s anything you’d like to swap.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center" style="height: 240px;">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Wear all you want</h3>
                         <p class="text-muted">Wear everything in your tote as much as you want. No purchase necessary, no styling fees, no strings attached.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center" style="height: 240px;">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
                         <h3>Return & repeat</h3>
                         <p class="text-muted">When you’re ready for a new tote, send everything back and we’ll send you a new one immediately. The shipping is on us.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center" style="height: 240px;">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
                         <h3>Separation anxiety?</h3>
@@ -218,13 +218,19 @@
             <h2 class="text-center">Brands</h2>
             <div class="row">
               <div class="col-md-4">
-                <img src="img/logos/elganso_brand.png" alt="" class="img-responsive" style="margin: 15px auto; max-width: 200px; max-height: 100px">
+                <div class="service-box">
+                  <img src="img/logos/elganso_brand.png" alt="" class="img-responsive" style="margin: 15px auto; max-width: 200px; max-height: 100px">
+                </div>
               </div>
               <div class="col-md-4">
-                <img src="img/logos/massimo_dutti_brand.jpg" alt="" class="img-responsive" style="margin: 15px auto; max-width: 200px; max-height: 100px">
+                <div class="service-box">
+                  <img src="img/logos/massimo_dutti_brand.jpg" alt="" class="img-responsive" style="margin: 15px auto; max-width: 200px; max-height: 100px">
+                </div>
               </div>
               <div class="col-md-4">
-                <img src="img/logos/singularu_brand.jpg" alt="" class="img-responsive" style="margin: 15px auto; max-width: 200px; max-height: 100px">
+                <div class="service-box">
+                  <img src="img/logos/singularu_brand.jpg" alt="" class="img-responsive" style="margin: 15px auto; max-width: 200px; max-height: 100px">
+                </div>
               </div>
             </div>
         </div>
